user crud and jwt